--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="shop-project/reset.css">
-    <link rel="stylesheet" href="shop-project/style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
     
-    <header class="header">Header
+    <header class="header">
         <div class="row">
             <div class="conteiner">
                 <div class="col-md-3">Logo</div>
@@ -19,8 +19,8 @@
             </div>
         </div>
     </header>
-    <main class="main">Main</main>
-    <footer class="footer">Foter</footer>
+    <!-- <main class="main">Main</main>
+    <footer class="footer">Foter</footer> -->
    
 </body>
 </html>
