--- a/index.html
+++ b/index.html
@@ -11,16 +11,32 @@
 <body>
     
     <header class="header">
-        <div class="row">
-            <div class="conteiner">
-                <div class="col-md-3">Logo</div>
-                <div class="col-md-6">Menu</div>
-                <div class="col-md-3">Search</div>
+        <div class="conteiner">
+            <div class="row">
+                <div class="col-md-3">
+                        <div class="logo">
+                            <a href="">
+                                <img src="images/logo.png" alt="">
+                            </a>
+                        </div>
+                </div>
+                <div class="col-md-6">
+                    <nav>
+                        <ul class="menu">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Products</a></li>
+                            <li><a href="">Payment</a></li>
+                            <li><a href="">Shipping</a></li>
+                        </ul>
+
+                    </nav>
+                </div>
+                <div class="col-md-3">search</div>
             </div>
         </div>
     </header>
-    <!-- <main class="main">Main</main>
-    <footer class="footer">Foter</footer> -->
+    <main class="main">Main</main>
+    <footer class="footer">Foter</footer>
    
 </body>
 </html>
