--- a/index.html
+++ b/index.html
@@ -13,25 +13,46 @@
     <header class="header">
         <div class="conteiner">
             <div class="row">
-                <div class="col-md-3">
-                        <div class="logo">
-                            <a href="">
-                                <img src="images/logo.png" alt="">
-                            </a>
-                        </div>
-                </div>
-                <div class="col-md-6">
-                    <nav>
-                        <ul class="menu">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Products</a></li>
-                            <li><a href="">Payment</a></li>
-                            <li><a href="">Shipping</a></li>
-                        </ul>
+                    <div class="col-md-3">
+                            <div class="logo">
+                                <a href="">
+                                    <img src="images/logo.png" alt="">
+                                </a>
+                            </div>
+                    </div>
+                    <div class="col-md-6">
+                        <nav>
+                            <ul class="menu">
+                                <li><a href="">Home</a></li>
+                                <li><a href="">Products</a></li>
+                                <li><a href="">Payment</a></li>
+                                <li><a href="">Shipping</a></li>
+                            </ul>
 
-                    </nav>
+                        </nav>
+                    </div>
+                    <div class="col-md-3">
+                        
+                        <div class="search">
+                                <form action="" method="post">
+                                    <input  type="text" placeholder="search">
+                                </form>
+                                <div class="lupa">
+                                    <button><img src="images/search.png"></button>
+                                </div>
+                        </div>
+
+                        <div class="korzina">
+                                <div class="ShoppingСart"><a href="#"><img src="images/korzina.png"></a>
+
+                                    <div class="count">4</div>
+                                    
+                                </div>
+                        </div>
+
+                    </div>
+
                 </div>
-                <div class="col-md-3">search</div>
             </div>
         </div>
     </header>
