--- a/index.html
+++ b/index.html
@@ -96,8 +96,67 @@
             </div>
         </div>
     </header>
-    <!-- <main class="main">Main</main>
-    <footer class="footer">Foter</footer> -->
+
+     <main class="main">
+        <div class="slider"></div>
+            <div class="main-conteiner">
+                <div class="col-main-md-3 filterpanel"></div>
+                <div class="col-main-md-9">
+                    <div class="col-main-md-9conteiner">
+                        <p class="filterlink"><a href="">Home page</a>  > <a href=""> Products </a> > <a href="" >Laptops and Tablets</a></p>
+                        <h2>Laptop and Tablets</h2>
+                    </div>
+                    <div class="col-main-md-3">
+                        <div class="image">
+                            <img class="image-center" src="images/icon (17).png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-main-md-3 ">
+                        <div class="image">
+                            <img class="image-center" src="images/icon (9).png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-main-md-3">
+                        <div class="image">
+                            <img class="image-center" src="images/icon (13).png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-main-md-3">
+                        <div class="image">
+                            <img class="image-center" src="images/icon (16).png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-main-md-3">
+                        <div class="image">
+                            
+                        </div>
+                    </div>
+                    <div class="col-main-md-3">
+                        <div class="image">
+                            <img class="image-center" src="images/icon (12).png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-main-md-3">
+                        <div class="image">
+                            <img class="image-center" src="images/icon (13).png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-main-md-3">
+                        <div class="image">
+                            <img class="image-center" src="images/icon (15).png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-main-md-3">
+                        <div class="image">
+                            <img class="image-center" src="images/icon (11).png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+     </main>
+    <!-- <footer class="footer">Foter</footer> --> 
    
 </body>
 </html>
