add bloc1 and bloc2

--- a/index.html
+++ b/index.html
@@ -109,21 +109,33 @@
                     <div class="col-main-md-3">
                         <div class="image">
                             <img class="image-center" src="images/icon (17).png" alt="">
+
+                            <div class="bloc1"></div>
+                            <div class="bloc2"></div>
                         </div>
                     </div>
                     <div class="col-main-md-3 ">
                         <div class="image">
                             <img class="image-center" src="images/icon (9).png" alt="">
+
+                            <div class="bloc1"></div>
+                            <div class="bloc2"></div>
                         </div>
                     </div>
                     <div class="col-main-md-3">
                         <div class="image">
                             <img class="image-center" src="images/icon (13).png" alt="">
+
+                            <div class="bloc1"></div>
+                            <div class="bloc2"></div>
                         </div>
                     </div>
                     <div class="col-main-md-3">
                         <div class="image">
                             <img class="image-center" src="images/icon (16).png" alt="">
+
+                            <div class="bloc1"></div>
+                            <div class="bloc2"></div>
                         </div>
                     </div>
                     <div class="col-main-md-3">
@@ -134,21 +146,33 @@
                     <div class="col-main-md-3">
                         <div class="image">
                             <img class="image-center" src="images/icon (12).png" alt="">
+
+                            <div class="bloc1"></div>
+                            <div class="bloc2"></div>
                         </div>
                     </div>
                     <div class="col-main-md-3">
                         <div class="image">
                             <img class="image-center" src="images/icon (13).png" alt="">
+
+                            <div class="bloc1"></div>
+                            <div class="bloc2"></div>
                         </div>
                     </div>
                     <div class="col-main-md-3">
                         <div class="image">
                             <img class="image-center" src="images/icon (15).png" alt="">
+
+                            <div class="bloc1"></div>
+                            <div class="bloc2"></div>
                         </div>
                     </div>
                     <div class="col-main-md-3">
                         <div class="image">
                             <img class="image-center" src="images/icon (11).png" alt="">
+
+                            <div class="bloc1"></div>
+                            <div class="bloc2"></div>
                         </div>
                     </div>
                 </div>
