--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="col-md-6">
                         <nav>
                             <ul class="menu">
-                                <li><a href="">Home</a>
+                                <li><a href="">Home1</a>
                                     <ul class="submenu home">
                                         <li><a href="">Lorem ipsum dolor</a></li>
                                         <li><a href="">Sit amet</a></li>
