--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                     </ul>
                                 </li>
 
-                                <li><a href="">Payment</a>
+                                <li><a href="">Payment 3</a>
                                     <ul class="submenu payment">
                                         <li><a href="">Consectetur</a></li>
                                         <li><a href="">Payment</a></li>
