--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                     </ul>
                                 </li>
 
-                                <li><a href="">Products 2</a>
+                                <li><a href="">Products</a>
                                     <ul class="submenu products">
                                         <li><a href="">Dolore magna aliqua</a></li>
                                         <li><a href="">Ut enim ad minim veniam</a></li>
@@ -44,7 +44,7 @@
                                     </ul>
                                 </li>
 
-                                <li><a href="">Payment 3</a>
+                                <li><a href="">Payment</a>
                                     <ul class="submenu payment">
                                         <li><a href="">Consectetur</a></li>
                                         <li><a href="">Payment</a></li>
@@ -183,4 +183,4 @@
     <!-- <footer class="footer">Foter</footer> --> 
    
 </body>
-</html>
+</html> 
