--- a/index.html
+++ b/index.html
@@ -23,7 +23,70 @@
                     </div>
                     <div class="col-md-6">
                         <nav>
-                            <ul class="menu">
+
+                            <div class="dropdown">
+                                <button class="dropbtn">Home</button>
+                                <div class="dropdown-content">
+                                    <a href="">Lorem ipsum dolor</a>
+                                    <a href="">Sit amet</a>
+                                    <a href="">Consectetur adipisicing</a>
+                                    <a href="">Tempor incididunt</a>
+                                    <a href="">Dolore magna aliqua</a>
+                                </div>
+                              </div>
+                              <div class="dropdown">
+                                <button class="dropbtn">Products</button>
+                                <div class="dropdown-content">
+                                    <a href="">Dolore magna aliqua</a>
+                                    <a href="">Ut enim ad minim veniam</a>
+                                    <a href="">Sit amet</a>
+                                    <a href="">Quis nostrud</a>
+                                </div>
+                              </div>
+                              <div class="dropdown">
+                                <button class="dropbtn">Payment</button>
+                                <div class="dropdown-content">
+                                    <a href="">Consectetur</a>
+                                    <a href="">Payment</a>
+                                    <a href="">Tempor incididunt</a>
+                                    <a href="">Tempor incididunt</a>
+                                    <a href="">Consectetur adipisicing</a>
+                                </div>
+                              </div>
+                              <div class="dropdown">
+                                <button class="dropbtn">Shipping</button>
+                                <div class="dropdown-content shipping">
+                                    <a href="">Lorem</a>
+                                    <a href="">Sit</a>
+                                    <a href="">Consectetur</a>
+                                    <a href="">Tempor incididunt</a>
+                                    <a href="">Lorem</a>
+                                </div>
+                              </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                            <!-- <ul class="menu">
                                 <li><a href="">Home123</a>
                                     <ul class="submenu home">
                                         <li><a href="">Lorem ipsum dolor</a></li>
@@ -64,7 +127,7 @@
                                     </ul>
                                 </li>
 
-                            </ul>
+                            </ul> -->
 
                         </nav>
                     </div>
