--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <div class="filterpanel">
                               
 
-                                <ul><span>devise type</span>
+                                <ul><span>device type</span>
                                     <li>
                                         <div class="checkbox">
                                             <input class="checkbox_filter" type="checkbox" id="Laptop">
