--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
                                         <div class="row product-conteiner">
                                             <div class="col-md-4">
-                                                <div class="product" data-aos="fade-up">
+                                                <div class="product" data-aos="fade-up" data-aos-duration="500">
                                                     <div class="product-image">
                                                         <img class="image-center" src="images/icon (17).png" alt="">
 
@@ -314,7 +314,7 @@
                                             </div>
 
                                             <div class="col-md-4">
-                                                <div class="product" data-aos="fade-up">
+                                                <div class="product" data-aos="fade-up" data-aos-duration="1000">
                                                     <div class="product-image">
                                                         <img class="image-center" src="images/icon (12).png" alt="">
 
@@ -363,7 +363,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-4">
-                                                <div class="product" data-aos="fade-up">
+                                                <div class="product" data-aos="fade-up" data-aos-duration="1500">
                                                     <div class="product-image">
                                                         <img class="image-center" src="images/icon (15).png" alt="">
 
@@ -412,7 +412,7 @@
                                             </div>
 
                                             <div class="col-md-4">
-                                                <div class="product" data-aos="fade-up">
+                                                <div class="product" data-aos="fade-up" data-aos-duration="500">
                                                     <div class="product-image">
                                                         <img class="image-center" src="images/icon (15).png" alt="">
 
@@ -460,7 +460,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-4">
-                                                <div class="product" data-aos="fade-up">
+                                                <div class="product" data-aos="fade-up" data-aos-duration="1000">
                                                     <div class="product-image">
                                                         <img class="image-center" src="images/icon (15).png" alt="">
 
@@ -508,7 +508,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-4">
-                                                <div class="product" data-aos="fade-up">
+                                                <div class="product" data-aos="fade-up" data-aos-duration="1500">
                                                     <div class="product-image">
                                                         <img class="image-center" src="images/icon (15).png" alt="">
 
@@ -560,7 +560,7 @@
                                         </div>
 
                                         <div class="col-md-4">
-                                            <div class="product" data-aos="fade-up">
+                                            <div class="product" data-aos="fade-up" data-aos-duration="500">
                                                 <div class="product-image">
                                                     <img class="image-center" src="images/icon (15).png" alt="">
 
@@ -610,7 +610,7 @@
                                         </div>
 
                                         <div class="col-md-4">
-                                            <div class="product" data-aos="fade-up">
+                                            <div class="product" data-aos="fade-up" data-aos-duration="1000">
                                                 <div class="product-image">
                                                     <img class="image-center" src="images/icon (15).png" alt="">
 
@@ -659,7 +659,7 @@
                                         </div>
 
                                         <div class="col-md-4">
-                                            <div class="product" data-aos="fade-up">
+                                            <div class="product" data-aos="fade-up" data-aos-duration="1500">
                                                 <div class="product-image">
                                                     <img class="image-center" src="images/icon (15).png" alt="">
 
